# StareBielany-game

./: Cargo.toml  README.md
assets/: StareBielanyMap.ldtk  mapa-test.json  sandbox.json  test.tmx  test10.json  test11.json  test12.json  test14.json  test15.json  test2.tmx  test3.tmx  test3.tsx  test4.json  test4.tmx  test5.tiled-session  test6.tmx  test8.json  test9.json
src/: main.rs
src/components/: bullet.rs  enemy.rs  health.rs  mod.rs  pickup.rs  wall.rs
src/helpers/: map_loader.rs  mod.rs  tiled.rs
src/plugins/: bullet.rs  cursor_position.rs  enemy.rs  mod.rs  physics.rs  pickup.rs  player.rs  wall.rs
src/resources/: constants.rs
src/setup/: camera.rs  mod.rs
src/systems/: confine_player_movement.rs  mod.rs  player_movement.rs
