[package]
name = "stare-bielany-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benimator = "4.1.3"
bevy = "0.12.1"
serde = "1.0.193"
serde_json = "1.0.108"
bevy_rapier2d = "0.23.0"
rand = { version = "0.8.5", features = [] }
